--- a/src/Litmus/appsettings.json
+++ b/src/Litmus/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "database": {
+    "connection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Litmus"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
