--- a/src/Litmus/Properties/launchSettings.json
+++ b/src/Litmus/Properties/launchSettings.json
@@ -1,7 +1,7 @@
 {
   "iisSettings": {
     "windowsAuthentication": true,
-    "anonymousAuthentication": false,
+    "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:30408/",
       "sslPort": 0
